--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+nav{
+    display: inline;
+
+}
+li{
+    display: inline;
+    list-style-type: none;
+}
+a{
+    text-decoration: none;
+    margin-left: 20px;
+}
